fix: parallax component no longer gets cutoff

--- a/src/app/components/parallax-section/parallax-section.css
+++ b/src/app/components/parallax-section/parallax-section.css
@@ -2,6 +2,11 @@
   display: block;
 }
 
+.parallax-background {
+  background-size: cover;
+  height: 130%;
+}
+
 .parallax-root {
   height: inherit;
   min-height: inherit;
